fixed spacing issue with partialWord

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,3 +22,12 @@ h1 {
     max-width: 40%;
     height: auto;
 }
+
+#instructions {
+    margin-top: 5em;
+}
+
+#beingGuessed {
+    margin-bottom: 1em;
+    margin-top: 1em;
+}
